# ugarit

./: README.md  mypy.ini  pylintrc  pyproject.toml
src/ugarit/: __init__.py  __main__.py  app.py  config.py  database.py  main.py
src/ugarit/api/: __init__.py  auth.py  base.py  biblio_item.py  book.py  book_item.py  borrower.py  borrower_account.py  borrower_address.py
src/ugarit/crud/: __init__.py  biblio_item.py  book.py  book_item.py  borrower.py  borrower_account.py  borrower_address.py
src/ugarit/models/: __init__.py  biblio_item.py  book.py  book_item.py  borrower.py  borrower_account.py  borrower_address.py
src/ugarit/schemas/: __init__.py  base.py  biblio.py  biblio_item.py  book.py  book_item.py  borrower.py  borrower_account.py  borrower_address.py
tests/: test_ugarit.py
