[tool.poetry]
name = "ugarit"
version = "0.1.0"
description = ""
authors = ["Goutham Krishna <gauthamkrishna9991@live.com>"]
readme = "README.md"

[tool.poetry.scripts]
ugarit = "ugarit.main:main"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = {extras = ["postgres"], version = "^1.4.32"}
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "7.0.1"
black = {version = "^22.1.0", allow-prereleases = true}
flake8 = "^4.0.1"
pylint = "^2.13.5"
mypy = "^0.942"
pylint-pydantic = "^0.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
